--- a/02. Module (CSS and CSS 3) -2/PRATICAL/03.Wave/Wave .html
+++ b/02. Module (CSS and CSS 3) -2/PRATICAL/03.Wave/Wave .html
@@ -23,6 +23,7 @@
             <div class="C-4"><img src="../../../../Assignment/Images/CSS/Wave-1 (4).png" alt=""></div>
             <div class="C-5"><img src="../../../../Assignment/Images/CSS/Wave-5.png" alt=""></div>
          </div>
+         <div class="nimu"></div>
     </div>
 </body>
 </html>
