--- a/02. Module (CSS and CSS 3) -2/THEORY/CSS.html
+++ b/02. Module (CSS and CSS 3) -2/THEORY/CSS.html
@@ -59,7 +59,7 @@
             font-size: x-small; 
         }
     </style>
-    <title>Document</title>
+    <title>CSS Q/A</title>
 </head>
 
 <body>
@@ -68,55 +68,30 @@
     <p>
         There are many benifits of css these benifits are :-
     <ul>
-        <li>Search engine optimization benefits</li>
-        <li>To many color options</li>
-        <li>More formatting options</li>
-        <li>Easy to maintain</li>
-        <li>Time-Saving </li>
+        <li>Separation of Content and Style. One of the most significant advantages of CSS is its ability to separate content from presentation.</li>
+        <li>Consistency.</li>
+        <li>Faster Loading Times. </li>
+        <li>Responsive Design.</li>
     </ul>
     </p>
-    <hr>
-    <hr>
     <hr>
     <hr>
     <h1>Q.2 What are the disadvantages of CSS?</h1>
     <h4>Ans:-</h4>
     <p>
     <ul>
-        <li>Limited support for older browsers</li>
-        <li>Differences in display on various devices</li>
-        <li>Device-specific compatibility challenges</li>
-        <li>Maintenance difficulties in large projects</li>
-        <li>Challenges in debugging complex layouts</li>
-        <li>Challenges in achieving pixel-perfect design</li>
+        <li>Browser compatibility: CSS may render differently in different web browsers, which can lead to inconsistencies in the visual presentation.</li>
+        <li>Learning curve: CSS can be complex for beginners, leading to a steep learning curve.</li>
     </ul>
     </p>
-    <hr>
-    <hr>
     <hr>
     <hr>
     <h1>Q.3 What is the difference between CSS2 and CSS3?</h1>
     <h4>Ans:-</h4>
     <h5>Here are major difference between CSS2 and CSS3</h5>
-    <p>
-        CSS3 is updated virson of CSS2
-    </p>
-    <p>
-        CSS3 adds a number of new features to CSS2, including:
     <ul>
-        <li>Flexbox</li>
-        <li>Grid</li>
-        <li>Animations</li>
-        <li>Transitions</li>
-        <li>Improved support for media queries</li>
+        <li>CSS2 introduced a new box model which included padding, borders, and margins. CSS3 introduced the flexible box layout module, which allows for more flexible layouts.</li>
     </ul>
-    </p>
-    <p>
-        Overall, CSS3 is a more powerful and versatile stylesheet language than CSS2. <br> It offers a number of new
-        features that make it easier to create responsive, dynamic,<br> and visually appealing web pages
-    </p>
-    <hr>
-    <hr>
     <hr>
     <hr>
     <h1>Q.4 Name a few CSS style components</h1>
@@ -130,16 +105,11 @@
     </p>
     <hr>
     <hr>
-    <hr>
-    <hr>
     <h1>Q.5 • What do you understand by CSS opacity?</h1>
     <h4>Ans:-</h4>
     <p>
-        The CSS opacity property is used to specify the transparency of an element. In simple word, you can say that it
-        specifies the clarity of the image.
+        The opacity CSS property sets the opacity of an element. Opacity is the degree to which content behind an element is hidden, and is the opposite of transparency.
     </p>
-    <hr>
-    <hr>
     <hr>
     <hr>
     <h1>Q.6 How can the background color of an element be changed?</h1>
@@ -149,15 +119,11 @@
     </p>
     <hr>
     <hr>
-    <hr>
-    <hr>
     <h1>Q.7 How can image repetition of the backup be controlled?</h1>
     <h4>Ans:-</h4>
     <p>
         By using background repeat property we can control image repetation property.
     </p>
-    <hr>
-    <hr>
     <hr>
     <hr>
     <h1>Q.8 What is the use of the background-position property?</h1>
@@ -167,15 +133,11 @@
     </p>
     <hr>
     <hr>
-    <hr>
-    <hr>
     <h1>Q.9 Which property controls the image scroll in the background?</h1>
     <h4>Ans:-</h4>
     <p>
         background-attachment property is used for image scroll in the background.
     </p>
-    <hr>
-    <hr>
     <hr>
     <hr>
     <h1>Q.10 Why should background and color be used as separate properties?</h1>
@@ -189,8 +151,6 @@
     </p>
     <hr>
     <hr>
-    <hr>
-    <hr>
     <h1>Q.11 How to center block elements using CSS1?</h1>
     <h4>Ans:-</h4>
     <p>
@@ -198,15 +158,11 @@
     </p>
     <hr>
     <hr>
-    <hr>
-    <hr>
     <h1>Q.12 How to maintain the CSS specifications?</h1>
     <h4>Ans:-</h4>
     <p>
         The CSS specifications are maintained by the World Wide Web Consortium (W3C). 
     </p>
-    <hr>
-    <hr>
     <hr>
     <hr>
     <h1>Q.13 What are the ways to integrate CSS as a web page?</h1>
@@ -221,8 +177,6 @@
     </p>
     <hr>
     <hr>
-    <hr>
-    <hr>
     <h1>Q.14 What is embedded style sheets</h1>
     <h4>Ans:-</h4>
     <p>
@@ -230,15 +184,11 @@
     </p>
     <hr>
     <hr>
-    <hr>
-    <hr>
     <h1>Q.15 What are the external style sheets?</h1>
     <h4>Ans:-</h4>
     <p>
         An external style sheet is a separate text file that each page in the web site can link to it in order to receive it's instructions.
     </p>
-    <hr>
-    <hr>
     <hr>
     <hr>
     <h1>Q.16 What are the advantages and disadvantages of using external style sheets?</h1>
@@ -257,8 +207,6 @@
     </ul>
     <hr>
     <hr>
-    <hr>
-    <hr>
     <h1>Q.17 What is the meaning of the CSS selector</h1>
     <h4>Ans:-</h4>
     <p>
@@ -271,8 +219,6 @@
             <li>Psuedo selector</li>
         </ul>
     </p>
-    <hr>
-    <hr>
     <hr>
     <hr>
     <h1>Q.18 What are the media types allowed by CSS?</h1>
@@ -293,8 +239,6 @@
     </p>
     <hr>
     <hr>
-    <hr>
-    <hr>
     <h1>Q.19 What is the rule set?</h1>
     <h4>Ans:-</h4>
     <p>
@@ -304,8 +248,6 @@
             <li>A CSS declaration consists of a CSS property name and value separated by a colon (:).</li>
         </ul>
     </p>
-    <hr>
-    <hr>
     <hr>
     <hr>
     
